Updates to the boombox section on the pricing page

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -341,15 +341,20 @@
                                         <ul class="box-body">
                                             <li><strong class="b">All the goodness of Qzzr</strong></li>
                                             <li><strong class="b">Plus the world's most engaging polls and lists</strong></li>
-                                            <li>Reduced branding or white label</li>
-                                            <li>Team collaboration tools</li>
-                                            <li>Support for multiple brands</li>
-                                            <li>Advanced customization options</li>
-                                            <li>VIP support &amp; strategy consultations</li>
-                                            <li>+</li>
-                                            <li>Enterprise features for publishers (ad refresh, data exports, boost content, etc.)</li>
-                                            <li>Enterprise features for marketers (lead generation, click-throughs, integrations, etc.)</li>
-                                            <li>Enterprise features for employee insights (ability to track individual responses, etc.)</li>
+                                            <li>Unlimited content</li>
+                                            <li>Unlimited collaborators and admins</li>
+                                            <li>Export raw data</li>
+                                            <li>Advanced customization</li>
+                                            <li>Reduce branding or white label</li>
+                                            <li>Unlimited offer conversions</li>
+                                            <li>Export lead data</li>
+                                            <li>Integrations</li>
+                                            <li>Content Mix</li>
+                                            <li>Content Boost</li>
+                                            <li>Dedicated Strategist</li>
+                                            <li>VIP Support</li>
+                                            <li>Ad refresh/callback</li>
+                                            <li>Gated results</li>
                                         </ul>
                                         <footer class="box-footer">
                                             <a href="http://go.qzzr.com/enterprise-request/" class="button button-pop button-white button-large h6 b">
