Wording change as per Owen.

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -345,7 +345,7 @@
                                             <li>Unlimited collaborators and admins</li>
                                             <li>Export raw data</li>
                                             <li>Advanced customization</li>
-                                            <li>Reduce branding or white label</li>
+                                            <li>Reduced branding or white label</li>
                                             <li>Unlimited offer conversions</li>
                                             <li>Export lead data</li>
                                             <li>Integrations</li>
