Added link to the press page.

--- a/press/index.html
+++ b/press/index.html
@@ -179,6 +179,7 @@
                             <h2 class="h1 h accent-color">Qzzr buzz and news</h2>
                             <h2 class="h2 h mbn mtn">2015</h2>
                             <ul>
+                                <li><strong>BuzzSumo</strong><a href=" http://buzzsumo.com/blog/be-inspired-the-best-b2b-content-of-2015" target="_blank">Be Inspired: The Best B2B Content Of 2015</a></li>
                                 <li><strong>Uberflip</strong><a href="http://hub.uberflip.com/h/i/164974722-8-expert-tips-to-generate-more-engagement-from-your-b2b-content" target="_blank">8 Expert Tips to Generate More Engagement From Your B2B Content</a></li>
                                 <li><strong>The Guardian</strong><a href="http://www.theguardian.com/media-network/2015/sep/24/emojis-social-media-week-london-2015" target="_blank">Emojis and quizzes led the way at Social Media Week 2015</a></li>
                                 <li><strong>Penguin Strategies</strong><a href="http://www.penguinstrategies.com/blog/pop-quiz-content-marketing-quizzes-what-are-they-good-for" target="_blank">Pop Quiz! Content Marketing Quizzes, What Are They Good For?</a></li>
