Fix boombox being in pricing page.

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -313,11 +313,11 @@
                                                 <span class="tooltip" data-tooltip="Full creative control - custom background and accent colors, invert text, hide cover page, custom Twitter via and hashtags, metatag share text insertion, and customize share button order."><i class="icon icon-ss-info"></i></span>
                                             </li>
                                             <li>No Qzzr branding (white label)
-                                                <span class="tooltip" data-tooltip="A complete white label of our product including embeds, links, and shares.  No Boombox branding anywhere."><i class="icon icon-ss-info"></i></span>
+                                                <span class="tooltip" data-tooltip="A complete white label of our product including embeds, links, and shares.  No Qzzr branding anywhere."><i class="icon icon-ss-info"></i></span>
                                             </li>
                                             <li>Export data</li>
                                             <li>Customize recommendations
-                                                <span class="tooltip" data-tooltip='Natively recommend more of your great interactive content created on Boombox to your audience after they engage.'><i class="icon icon-ss-info"></i></span>
+                                                <span class="tooltip" data-tooltip='Natively recommend more of your great interactive content created on Qzzr to your audience after they engage.'><i class="icon icon-ss-info"></i></span>
                                             </li>
                                             <li>Unlimited offer conversions </li>
                                             <li>Integrations</li>
@@ -334,7 +334,7 @@
                                                 <span class="tooltip" data-tooltip='Require an offer conversion in order for a visitor to see results.'><i class="icon icon-ss-info"></i></span>
                                             </li>
                                             <li>Dedicated Engagement Strategist
-                                                <span class="tooltip" data-tooltip='You’ll be assigned one of Boombox’s finest strategists who are working with some of the most innovative content creators in the world.  We’ll invest heavily in your success.'><i class="icon icon-ss-info"></i></span>
+                                                <span class="tooltip" data-tooltip='You’ll be assigned one of Qzzr’s finest strategists who are working with some of the most innovative content creators in the world.  We’ll invest heavily in your success.'><i class="icon icon-ss-info"></i></span>
                                             </li>
                                             <li>VIP Support
                                                 <span class="tooltip" data-tooltip='It’s like a fast pass to the front of the line to our lovely and talented ambassador team.'><i class="icon icon-ss-info"></i></span>
