Updated Enterprise Plan heading and CTA

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -296,14 +296,14 @@
 
                                     <div class="box box-pricing box-pricing-primary">
                                         <header class="box-header">
-                                            Enterprise
+                                            Enterprise (Boombox)
                                         </header>
                                         <div class="box-subheader">
-                                            Custom Plans
+                                            Custom plans
                                         </div>
                                         <footer class="box-footer">
                                             <a href="http://go.qzzr.com/enterprise-request/" class="button button-pop button-white button b">
-                                              Request info
+                                              Talk with a Strategist
                                             </a>
                                         </footer>
                                         <ul class="box-body">
