--- a/pricing/index.html
+++ b/pricing/index.html
@@ -307,7 +307,7 @@
                                             </a>
                                         </footer>
                                         <ul class="box-body">
-                                            <li>Unlimited quizzes, polls, and list</li>
+                                            <li>Unlimited quizzes, <span class="b">polls, and lists</span></li>
                                             <li>Limited engagements by plan</li>
                                             <li>Advanced customization
                                                 <span class="tooltip" data-tooltip="Full creative control - custom background and accent colors, invert text, hide cover page, custom Twitter via and hashtags, metatag share text insertion, and customize share button order."><i class="icon icon-ss-info"></i></span>
