don't hardcode auth domain for signup link

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -241,7 +241,7 @@
                                             <span>$299 / year</span>
                                         </div>
                                         <footer class="box-footer">
-                                            <a href='https://auth.boombox.com/signup/fi9vYXV0aC9jbGllbnRzL3F6enI/plan/fi9wbGFucy85Mw' class="button button-primary button-outline button b">
+                                            <a href='/signup/fi9vYXV0aC9jbGllbnRzL3F6enI/plan/fi9wbGFucy85Mw' class="button button-primary button-outline button b">
                                               Sign up
                                             </a>
                                         </footer>
