Added a helper class to accomidate the longer title of the boombox request button

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -302,8 +302,8 @@
                                             Custom plans
                                         </div>
                                         <footer class="box-footer">
-                                            <a href="http://go.qzzr.com/enterprise-request/" class="button button-pop button-white button b">
-                                              Talk with a Strategist
+                                            <a href="http://go.qzzr.com/enterprise-request/" class="button button-pop button-white button b button-long-label">
+                                              Schedule the demo of a lifetime
                                             </a>
                                         </footer>
                                         <ul class="box-body">
