Added tracking events for home page, pricing page, and header

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                         <div class="execphpwidget">
                             <h1 class="h1 accent-color h mtn mb2">Create, embed, and share your own quizzes</h1>
                             <h2 class="h3 mb4">Drive social traffic <span class="opacity-5">&middot;</span> Generate leads</h2>
-                            <a href="pricing" class="button button-large button-primary h6 b mr2 ml2 mb2 get_start"> Get started Now</a>
+                            <a href="pricing" class="button button-large button-primary h6 b mr2 ml2 mb2 get_start" onClick="ga('send', 'event', 'Pricing Page', 'Get Started Now', 'Home Page');"> Get started Now</a>
                             <p class="h8-cap mt3">
                                 <a class="link video" href="http://vimeo.com/117419876">Watch a quick video
                                 </a> <span class="opacity-5 wm-none">or</span> <a class="wm-none link" href="pricing">See our premium plans</a>
