--- a/pricing/index.html
+++ b/pricing/index.html
@@ -151,7 +151,7 @@
                                 <div class="textwidget">
                                     <div class="nav-bar-actions ">
                                         <nav class="nav-bar-action">
-                                            <a href="/signup" class="button button-primary button-with-label tooltip tooltip-always tooltip-primary mr2" data-tooltip="It's free">
+                                            <a href="/signup" class="button button-primary button-with-label tooltip tooltip-always tooltip-primary mr2" data-tooltip="It's free" onClick="ga('send', 'event', 'Signup', 'Create a quiz', 'Header');">
                                                 <i class="icon icon-ss-compose"></i>
                                                 <span class="inline-block">
                                                     <span class="button-label">Create<span class=" wl-none"> a quiz</span></span>
@@ -215,7 +215,7 @@
                                             Free
                                         </div>
                                         <footer class="box-footer">
-                                            <a class="button button-outline button-primary button b" href="/signup">
+                                            <a class="button button-outline button-primary button b" href="/signup"onClick="ga('send', 'event', 'Signup', 'Qzzr Basic', 'Pricing Page');">
                                               Sign up
                                             </a>
                                         </footer>
@@ -241,7 +241,7 @@
                                             <span>$299 / year</span>
                                         </div>
                                         <footer class="box-footer">
-                                            <a href='/signup/fi9vYXV0aC9jbGllbnRzL3F6enI/plan/fi9wbGFucy85Mw' class="button button-primary button-outline button b">
+                                            <a href='/signup/fi9vYXV0aC9jbGllbnRzL3F6enI/plan/fi9wbGFucy85Mw' class="button button-primary button-outline button b"onClick="ga('send', 'event', 'Signup', 'Qzzr Pro', 'Pricing Page');">
                                               Sign up
                                             </a>
                                         </footer>
@@ -302,7 +302,7 @@
                                             Custom plans
                                         </div>
                                         <footer class="box-footer">
-                                            <a href="http://go.qzzr.com/enterprise-request/" class="button button-pop button-white button b button-long-label">
+                                            <a href="http://go.qzzr.com/enterprise-request/" class="button button-pop button-white button b button-long-label" onClick="ga('send', 'event', 'Signup', 'Qzzr Enterprise', 'Pricing Page');">
                                               Schedule the demo of a lifetime
                                             </a>
                                         </footer>
