--- a/stories/test/index.html
+++ b/stories/test/index.html
@@ -148,7 +148,7 @@
                                 <div class="textwidget">
                                     <div class="nav-bar-actions ">
                                         <nav class="nav-bar-action">
-                                            <a href="https://app.qzzr.com/account/signup" class="button button-primary button-with-label tooltip tooltip-always tooltip-primary mr2" data-tooltip="It's free">
+                                            <a href="https://app.qzzr.com/account/signup" class="button button-primary button-with-label tooltip tooltip-always tooltip-primary mr2" data-tooltip="It's free" onClick="ga('send', 'event', 'Signup', 'Create a quiz', 'Header');">
                                                 <i class="icon icon-ss-compose"></i>
                                                 <span class="inline-block">
                                                     <span class="button-label">Create<span class=" wl-none"> a quiz</span></span>
