--- a/uses/publishers/index.html
+++ b/uses/publishers/index.html
@@ -132,7 +132,7 @@
                                 <div class="textwidget">
                                     <div class="nav-bar-actions ">
                                         <nav class="nav-bar-action">
-                                            <a href="/signup" class="button button-primary button-with-label tooltip tooltip-always tooltip-primary mr2" data-tooltip="It's free">
+                                            <a href="/signup" class="button button-primary button-with-label tooltip tooltip-always tooltip-primary mr2" data-tooltip="It's free" onClick="ga('send', 'event', 'Signup', 'Create a quiz', 'Header');">
                                                 <i class="icon icon-ss-compose"></i>
                                                 <span class="inline-block">
           <span class="button-label">Create<span class=" wl-none"> a quiz</span></span>
