--- a/index.html
+++ b/index.html
@@ -640,9 +640,9 @@
                 <div class="media-content">
                     <p>"We love Qzzr. A recent quiz generated <strong>over 16,000 leads and $75,000 in revenue.</strong>"</p>
                     <footer>
-                        <p class="name b">Chris Pirotta</p>
+                        <p class="name b">Chris Pirrotta</p>
                         <span>Director of Ecommerce,</span>
-                        <span>Slideshow Collectibles</span>
+                        <span>Sideshow Collectibles</span>
                     </footer>
                 </div>
             </div>
