--- a/quizzes-topical/index.html
+++ b/quizzes-topical/index.html
@@ -193,33 +193,33 @@
                             <li class='col-3 col-wxl-6 col-wm-12'>
                                 <a href='#hash-1' class='card card-border content-viewer-tab js-content-item is-active is-selected' id='quiz-1' data-content='quiz-1'>
                                     <span class="card-header">
-                                        Do you have a jargon problem?                                    
+                                        Do you know your confidence symbol?
                                     </span>
-                                    <img class="card-image" src="https://movement-prod.imgix.net/uploads/60/d530df857415a4caec96f35b567286/business_cubicles.jpg?fit=min&w=888">
+                                    <img class="card-image" src='https://movement-prod.imgix.net/uploads/01/f15869d074859b18fec6c417f18df7/confidence.jpg?fit=min&w=888'>
                                 </a>
                             </li>
                             <li class='col-3 col-wxl-6 col-wm-12'>
                                 <a href='#hash-2' class='card card-border content-viewer-tab js-content-item' id='quiz-2' data-content='quiz-2'>
                                     <span class="card-header">
-                                        Are You A Business Jargonaut?
+                                        Do you know your confidence symbol?
                                     </span>
-                                    <img class="card-image" src="https://movement-prod.imgix.net/quiz/3/1383932225_large.jpg?fit=min&w=888">
+                                    <img class="card-image" src='https://movement-prod.imgix.net/uploads/01/f15869d074859b18fec6c417f18df7/confidence.jpg?fit=min&w=888'>
                                 </a>
                             </li>
                             <li class='col-3 col-wxl-6 col-wm-12'>
                                 <a href='#hash-3' class='card card-border content-viewer-tab js-content-item' id='quiz-3' data-content='quiz-3'>
                                     <span class="card-header">
-                                        How well do you know Seinfeld?
+                                        Do you know your confidence symbol?
                                     </span>
-                                    <img class="card-image" src="https://movement-staging.imgix.net/uploads/1b/f44f516457292cae54b6dd2ecb039d/SEINFELD_facebook.jpg?fit=min&w=888">
+                                    <img class="card-image" src='https://movement-prod.imgix.net/uploads/01/f15869d074859b18fec6c417f18df7/confidence.jpg?fit=min&w=888'>
                                 </a>
                             </li>
                             <li class='col-3 col-wxl-6 col-wm-12'>
                                 <a href='#hash-4' class='card card-border content-viewer-tab js-content-item' id='quiz-4' data-content='quiz-4'>
                                     <span class="card-header">
-                                        Find out which movie you should watch this weekend
+                                        Do you know your confidence symbol?
                                     </span>
-                                    <img class="card-image" src="https://movement-prod.imgix.net/uploads/c8/27188cf65eb1d3b0c487a3d8a336de/Toyogeki_Movie_Toyooka002.jpg?fit=min&w=888">
+                                    <img class="card-image" src='https://movement-prod.imgix.net/uploads/01/f15869d074859b18fec6c417f18df7/confidence.jpg?fit=min&w=888'>
                                 </a>
                             </li>
                         </ul>
