updated tabs with content

--- a/quizzes/index.html
+++ b/quizzes/index.html
@@ -191,7 +191,7 @@
                         </div>
                          <ul id='hash-loader' class='content-viewer-tabs col-10 col-offset-1'>
                             <li class='col-3 col-wxl-6 col-wm-12'>
-                                <a href='#hash-1' class='card card-border content-viewer-tab js-content-item is-active is-selected' id='quiz-1' data-content='quiz-1'>
+                                <a href='#quiz-154047' class='card card-border content-viewer-tab js-content-item is-active is-selected' id='quiz-1' data-content='quiz-1'>
                                     <span class="card-header">
                                         Do you have a jargon problem?                                    
                                     </span>
@@ -199,7 +199,7 @@
                                 </a>
                             </li>
                             <li class='col-3 col-wxl-6 col-wm-12'>
-                                <a href='#hash-2' class='card card-border content-viewer-tab js-content-item' id='quiz-2' data-content='quiz-2'>
+                                <a href='#quiz-03' class='card card-border content-viewer-tab js-content-item' id='quiz-2' data-content='quiz-2'>
                                     <span class="card-header">
                                         Are You A Business Jargonaut?
                                     </span>
@@ -207,19 +207,19 @@
                                 </a>
                             </li>
                             <li class='col-3 col-wxl-6 col-wm-12'>
-                                <a href='#hash-3' class='card card-border content-viewer-tab js-content-item' id='quiz-3' data-content='quiz-3'>
+                                <a href='#quiz-53037' class='card card-border content-viewer-tab js-content-item' id='quiz-3' data-content='quiz-3'>
+                                    <span class="card-header">
+                                        How well do you know Seinfeld?
+                                    </span>
+                                    <img class="card-image" src="https://movement-staging.imgix.net/uploads/fc/7aab8dd42cfd037b901aa78934b1cb/187886405_ffb6b365c6_z.jpg?fit=min&w=888">
+                                </a>
+                            </li>
+                            <li class='col-3 col-wxl-6 col-wm-12'>
+                                <a href='#quiz-77061' class='card card-border content-viewer-tab js-content-item' id='quiz-4' data-content='quiz-4'>
                                     <span class="card-header">
                                         How well do you know Seinfeld?
                                     </span>
                                     <img class="card-image" src="https://movement-staging.imgix.net/uploads/1b/f44f516457292cae54b6dd2ecb039d/SEINFELD_facebook.jpg?fit=min&w=888">
-                                </a>
-                            </li>
-                            <li class='col-3 col-wxl-6 col-wm-12'>
-                                <a href='#hash-4' class='card card-border content-viewer-tab js-content-item' id='quiz-4' data-content='quiz-4'>
-                                    <span class="card-header">
-                                        Find out which movie you should watch this weekend
-                                    </span>
-                                    <img class="card-image" src="https://movement-prod.imgix.net/uploads/c8/27188cf65eb1d3b0c487a3d8a336de/Toyogeki_Movie_Toyooka002.jpg?fit=min&w=888">
                                 </a>
                             </li>
                         </ul>
