--- a/quizzes/index.html
+++ b/quizzes/index.html
@@ -18,7 +18,7 @@
     <link rel="canonical" href="https://www.qzzr.com/our-team" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Meet the Qzzr Team &amp; Investors | Qzzr" />
+    <meta property="og:title" content="Quizzes" />
     <meta property="og:description" content="Founded by CEO Josh Little, Qzzr&#039;s team combines the best of the best in product development &amp; design. Learn more about our team and our investors." />
     <meta property="og:url" content="https://www.qzzr.com/our-team" />
     <meta property="og:site_name" content="Qzzr" />
