--- a/quizzes/index.html
+++ b/quizzes/index.html
@@ -209,7 +209,7 @@
                             <li class='col-3 col-wxl-6 col-wm-12'>
                                 <a href='#quiz-53037' class='card card-border content-viewer-tab js-content-item' id='quiz-3' data-content='quiz-3'>
                                     <span class="card-header">
-                                        How well do you know Seinfeld?
+                                        How Well Do You Remember the NBA of the 1990s?
                                     </span>
                                     <img class="card-image" src="https://movement-staging.imgix.net/uploads/fc/7aab8dd42cfd037b901aa78934b1cb/187886405_ffb6b365c6_z.jpg?fit=min&w=888">
                                 </a>
