updated meta tags

--- a/quizzes/index.html
+++ b/quizzes/index.html
@@ -14,13 +14,13 @@
     </script>
     <!-- End Google Tag Manager for WordPress by DuracellTomi -->
     <!-- This site is optimized with the Yoast WordPress SEO plugin v1.7.4 - https://yoast.com/wordpress/plugins/seo/ -->
-    <meta name="description" content="Founded by CEO Josh Little, Qzzr&#039;s team combines the best of the best in product development &amp; design. Learn more about our team and our investors." />
+    <meta name="description" content='Drive traffic, capture leads, and enrich your website without having to hire developers.' />
     <link rel="canonical" href="https://www.qzzr.com/our-team" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Quizzes" />
-    <meta property="og:description" content="Founded by CEO Josh Little, Qzzr&#039;s team combines the best of the best in product development &amp; design. Learn more about our team and our investors." />
-    <meta property="og:url" content="https://www.qzzr.com/our-team" />
+    <meta property="og:title" content='World class quizzes: quizzes for buisiness' />
+    <meta property="og:description" content='Drive traffic, capture leads, and enrich your website without having to hire developers.' />
+    <meta property="og:url" content="https://www.qzzr.com/quizzes" />
     <meta property="og:site_name" content="Qzzr" />
     <!-- / Yoast WordPress SEO plugin. -->
     <link rel="alternate" type="application/rss+xml" title="Qzzr &raquo; Feed" href="/feed" />
