--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
                                     </div>
                                     <!--.pop-inside-->
                                 </div>
-                                <!--.pop-layout-v-->
+                                <!--.pop-layout-->
                             </div>
                         </div>
                     </div>
