Fixing some background alignment problems on quiz examples pages.

--- a/quizzes/index.html
+++ b/quizzes/index.html
@@ -173,7 +173,7 @@
             <div class="wrap">
                 <div id="content-sidebar-wrap">
                     <div class='grid mt4 mb6'>
-                        <div class='content-viewer-container'>
+                        <div class='content-viewer-container grid grid nested'>
                             <div class='content-loader-container col-6 mt4 col-offset-1 col-wl-10 col-wm-12 col-wm-offset-0'>
                                 <div class='js-content-loader'>
                                 </div>
@@ -195,7 +195,7 @@
                                     <span class="card-header">
                                         Do you have a jargon problem?                                    
                                     </span>
-                                    <img class="card-image" src="https://movement-prod.imgix.net/uploads/60/d530df857415a4caec96f35b567286/business_cubicles.jpg?fit=min&w=888">
+                                    <div class="card-image" style="background-image: url(https://movement-prod.imgix.net/uploads/60/d530df857415a4caec96f35b567286/business_cubicles.jpg?fit=min&w=888);"></div>
                                 </a>
                             </li>
                             <li class='col-3 col-wxl-6 col-wm-12'>
@@ -203,7 +203,7 @@
                                     <span class="card-header">
                                         Are You A Business Jargonaut?
                                     </span>
-                                    <img class="card-image" src="https://movement-prod.imgix.net/quiz/3/1383932225_large.jpg?fit=min&w=888">
+                                    <div class="card-image" style="background-image: url(https://movement-prod.imgix.net/quiz/3/1383932225_large.jpg?fit=min&w=888);"></div>
                                 </a>
                             </li>
                             <li class='col-3 col-wxl-6 col-wm-12'>
@@ -211,7 +211,7 @@
                                     <span class="card-header">
                                         How Well Do You Remember the NBA of the 1990s?
                                     </span>
-                                    <img class="card-image" src="https://movement-staging.imgix.net/uploads/fc/7aab8dd42cfd037b901aa78934b1cb/187886405_ffb6b365c6_z.jpg?fit=min&w=888">
+                                    <div class="card-image" style="background-image: url(https://movement-staging.imgix.net/uploads/fc/7aab8dd42cfd037b901aa78934b1cb/187886405_ffb6b365c6_z.jpg?fit=min&w=888);"></div>
                                 </a>
                             </li>
                             <li class='col-3 col-wxl-6 col-wm-12'>
@@ -219,7 +219,7 @@
                                     <span class="card-header">
                                         How well do you know Seinfeld?
                                     </span>
-                                    <img class="card-image" src="https://movement-staging.imgix.net/uploads/1b/f44f516457292cae54b6dd2ecb039d/SEINFELD_facebook.jpg?fit=min&w=888">
+                                    <div class="card-image" style="background-image: url(https://movement-staging.imgix.net/uploads/1b/f44f516457292cae54b6dd2ecb039d/SEINFELD_facebook.jpg?fit=min&w=888);"></div>
                                 </a>
                             </li>
                         </ul>
