--- a/quizzes/index.html
+++ b/quizzes/index.html
@@ -174,11 +174,11 @@
                 <div id="content-sidebar-wrap">
                     <div class='grid mt4 mb6'>
                         <div class='content-viewer-container grid grid nested'>
-                            <div class='content-loader-container col-6 mt4 col-offset-1 col-wl-10 col-wm-12 col-wm-offset-0'>
+                            <div class='content-loader-container col-6 mt4 col-offset-1 col-wxl-10 col-wm-12 col-wm-offset-0'>
                                 <div class='js-content-loader'>
                                 </div>
                             </div>
-                            <div class='col-4 col-wl-offset-1 col-wl-10 col-wm-12 col-wm-offset-0 content-viewer-cta-container'>
+                            <div class='col-4 col-wxl-offset-0 col-wxl-10 col-wm-12 col-wm-offset-0 content-viewer-cta-container'>
                                 <h1 class='h2 accent-color mb2' style="line-height:1.1em">
                                     Making world class quizzes is effortless and affordable
                                 </h1>
