updated boombox footer urls

--- a/index.html
+++ b/index.html
@@ -682,10 +682,10 @@
             <div class="wrap_middle">
                 <hr class="rule-center rule mt5 mb5">
                 <div class="mb3 mt4">
-                    <a href="https://www.boombox.com/"><img width="300px" src="https://dp5pnij3net95.cloudfront.net/images/Boombox-logo---color---Small.png" /></a>
+                    <a href='http://www.boombox.com/?utm_source=site&utm_medium=qzzr' target='_blank'><img width="300px" src="https://dp5pnij3net95.cloudfront.net/images/Boombox-logo---color---Small.png" /></a>
                 </div>
-                <p class="mb4">Qzzr was created by the team behind <a class="blue-color" href="https://www.boombox.com/"><strong>Boombox</strong></a>, <br>the platform for people who are serious about creating world-class content.</p>
-                <a href="https://www.boombox.com/" class="button button-medium button-primary ml2 take_tour">LEARN MORE</a>
+                <p class="mb4">Qzzr was created by the team behind <a class="blue-color" href='http://www.boombox.com/?utm_source=site&utm_medium=qzzr' target='_blank'><strong>Boombox</strong></a>, <br>the platform for people who are serious about creating world-class content.</p>
+                <a href='http://www.boombox.com/?utm_source=site&utm_medium=qzzr' target='_blank' class="button button-medium button-primary ml2 take_tour">LEARN MORE</a>
                 <!--
                 <h3>As seen on</h3>
                 <div class="client">
