--- a/quizzes/index.html
+++ b/quizzes/index.html
@@ -207,19 +207,19 @@
                                 </a>
                             </li>
                             <li class='col-3 col-wxl-6 col-wm-12'>
-                                <a href='#quiz-53037' class='card card-border content-viewer-tab js-content-item quiz-53037' data-content='quiz-53037'>
+                                <a href='#quiz-3434' class='card card-border content-viewer-tab js-content-item quiz-3434' data-content='quiz-3434'>
                                     <span class="card-header">
-                                        How Well Do You Remember the NBA of the 1990s?
+                                       What is YourContent Marketing IQ?
                                     </span>
-                                    <div class="card-image" style="background-image: url(https://movement-staging.imgix.net/uploads/fc/7aab8dd42cfd037b901aa78934b1cb/187886405_ffb6b365c6_z.jpg?fit=min&w=888);"></div>
+                                    <div class="card-image" style="background-image: url(https://movement-prod.imgix.net/transloadit/09/62a270c18f11e3bc4825d5df10b05c/shutterstock_149463557.jpg?fit=min&w=888);"></div>
                                 </a>
                             </li>
                             <li class='col-3 col-wxl-6 col-wm-12'>
-                                <a href='#quiz-77061' class='card card-border content-viewer-tab js-content-item quiz-77061' data-content='quiz-77061'>
+                                <a href='#quiz-6081' class='card card-border content-viewer-tab js-content-item quiz-6081' data-content='quiz-6081'>
                                     <span class="card-header">
-                                        How well do you know Seinfeld?
+                                        Would Your Content Go Viral?
                                     </span>
-                                    <div class="card-image" style="background-image: url(https://movement-staging.imgix.net/uploads/1b/f44f516457292cae54b6dd2ecb039d/SEINFELD_facebook.jpg?fit=min&w=888);"></div>
+                                    <div class="card-image" style="background-image: url(//d4vp3733ickae.cloudfront.net/1041x600/de514d/fff.png&text=+);"></div>
                                 </a>
                             </li>
                         </ul>
